--- a/Detection/Detector_Inference.ipynb
+++ b/Detection/Detector_Inference.ipynb
@@ -34,10 +34,11 @@
     "        self.viz_path = viz_path\n",
     "        self.text_path = text_path\n",
     "        self.palette = palette\n",
+    "        self.backbone = backbone\n",
     "        \n",
     "        \n",
     "    def load_retinanet(self):\n",
-    "        model = models.load_model(self.retinanet_weights, backbone_name=backbone)\n",
+    "        model = models.load_model(self.retinanet_weights, backbone_name=self.backbone)\n",
     "        self.model = models.convert_model(model)\n",
     "        \n",
     "    \n",
