Added comments in Detector_inference

--- a/Detection/Detector_Inference.ipynb
+++ b/Detection/Detector_Inference.ipynb
@@ -43,7 +43,7 @@
     "        \n",
     "    \n",
     "    def filter_bbox(self,boxes,scores,classes,score_threshold=0.3):\n",
-    "        res = np.where(scores[0] ==(list(filter(lambda i: i < score_threshold, scores[0]))[0]))[0][0]\n",
+    "        res = np.where(scores[0] ==(list(filter(lambda i: i < score_threshold, scores[0]))[0]))[0][0]\n", "#scores returned by retinanet model are already retured as sorted from highest to lowest in terms of confidence score, so by filtering like this, we get indices of predictions that are less than confidence threshold, so we retain outputs from start till last prediction that is greater than equal to score threshold\n", 
     "        return boxes[0][0:res],scores[0][0:res],classes[0][0:res]\n",
     "    \n",
     "    \n",
